syntax = "proto3";

package authentication;

message SignInRequest {
    string login = 1;
    string password = 2;
}

message SignInResponse {
    string session_id = 1;
}

service Authentication {
    rpc SignIn (SignInRequest) returns (SignInResponse);
}
